--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,3 +6,8 @@ data_ingestion:
   source_URL: https://github.com/amahbub2006/wine-ml/raw/refs/heads/main/archive.zip
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
+
+data_validation:
+  root_dir: artifacts/data_validation
+  unzip_data_dir: artifacts/data_ingestion/WineQT.csv
+  STATUS_FILE: artifacts/data_validation/status.txt
